--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "babel-plugin-styled-components": "^1.12.0",
     "bootstrap": "^4.5.0",
     "gatsby": "^2.23.7",
     "gatsby-image": "^2.4.7",
@@ -22,6 +23,7 @@
     "gatsby-plugin-react-helmet": "^3.3.4",
     "gatsby-plugin-sass": "^2.3.4",
     "gatsby-plugin-sharp": "^2.6.12",
+    "gatsby-plugin-styled-components": "^4.6.0",
     "gatsby-source-filesystem": "^2.3.12",
     "gatsby-transformer-sharp": "^2.5.5",
     "nanoid": "^3.1.10",
@@ -32,9 +34,13 @@
     "react-dom": "^16.13.1",
     "react-github-btn": "^1.2.0",
     "react-helmet": "^6.1.0",
+    "react-icons": "^4.2.0",
     "react-reveal": "^1.2.2",
     "react-scroll": "^1.7.16",
-    "react-tilt": "^0.1.4"
+    "react-tilt": "^0.1.4",
+    "react-typing-effect": "^2.0.5",
+    "react-typist": "^2.0.5",
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
