--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-github-btn": "^1.2.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
+    "react-parallax-tilt": "^1.5.23",
     "react-reveal": "^1.2.2",
     "react-scroll": "^1.7.16",
     "react-tilt": "^0.1.4",
