--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "babel-plugin-styled-components": "^1.12.0",
     "bootstrap": "^4.5.0",
     "gatsby": "^2.23.7",
